--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+	<img src="image.jpg" alt="photo">
+    <h1>Divya Sivakumar</h1>
+    <a href="https://www.linkedin.com/in/divya-sivakumar-0759aa135">linkdln-profile</a>
+
+    <section id="skills">
+        <p>java Programming</p>
+        <p>HTML</p>
+        <p>CSS</p>
+    </section>
+    <section id="projects">
+        <ul>
+            <li>making a swiggy clone using html and css</li>
+            <li>create a  registartaion page</li>
+        </ul>
+    </section> 
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
